# subsocial-v2

./: .dockerignore  Cargo.toml  README.md  RUSTC_VERSION  pallet_claims.rs  types.json
.github/workflows/: check.yml  deploy-docs.yml  docker-build.yml  run-tests.yml
.maintain/: weight-template.hbs
docker/: Dockerfile  docker-compose.yml
node/: Cargo.toml
node/res/: subsocial.json
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/claims/: Cargo.toml
pallets/claims/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/df-integration-tests/: Cargo.toml
pallets/df-integration-tests/src/: lib.rs
pallets/donations/: Cargo.toml
pallets/donations/src/: lib.rs
pallets/dotsama-claims/: Cargo.toml
pallets/dotsama-claims/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/faucets/: Cargo.toml
pallets/faucets/src/: lib.rs  mock.rs  tests.rs
pallets/moderation/: Cargo.toml  types.json
pallets/moderation/src/: functions.rs  lib.rs  mock.rs  tests.rs
pallets/permissions/: Cargo.toml
pallets/permissions/src/: lib.rs
pallets/post-history/: Cargo.toml
pallets/post-history/src/: lib.rs
pallets/posts/: Cargo.toml
pallets/posts/rpc/: Cargo.toml
pallets/posts/rpc/runtime-api/: Cargo.toml
pallets/posts/src/: functions.rs  lib.rs  rpc.rs
pallets/profile-follows/: Cargo.toml
pallets/profile-follows/rpc/: Cargo.toml
pallets/profile-follows/rpc/runtime-api/: Cargo.toml
pallets/profile-follows/src/: lib.rs
pallets/profile-history/: Cargo.toml
pallets/profile-history/src/: lib.rs
pallets/profiles/: Cargo.toml
pallets/profiles/rpc/: Cargo.toml
pallets/profiles/rpc/runtime-api/: Cargo.toml
pallets/profiles/rpc/runtime-api/src/: lib.rs
pallets/profiles/rpc/src/: lib.rs
pallets/profiles/src/: lib.rs  rpc.rs
pallets/reactions/: Cargo.toml
pallets/reactions/rpc/: Cargo.toml
pallets/reactions/rpc/runtime-api/: Cargo.toml
pallets/reactions/src/: lib.rs  rpc.rs
pallets/roles/: Cargo.toml
pallets/roles/rpc/: Cargo.toml
pallets/roles/rpc/runtime-api/: Cargo.toml
pallets/roles/src/: lib.rs  mock.rs
pallets/scores/src/: lib.rs
pallets/session-keys/: Cargo.toml
pallets/session-keys/src/: mock.rs
pallets/space-follows/: Cargo.toml
pallets/space-follows/rpc/: Cargo.toml
pallets/space-follows/rpc/runtime-api/: Cargo.toml
pallets/space-follows/src/: lib.rs
pallets/space-history/: Cargo.toml
pallets/space-history/src/: lib.rs
pallets/space-multi-ownership/src/: lib.rs  tests.rs
pallets/space-ownership/: Cargo.toml
pallets/space-ownership/src/: lib.rs
pallets/spaces/: Cargo.toml
pallets/spaces/rpc/: Cargo.toml
pallets/spaces/rpc/runtime-api/: Cargo.toml
pallets/spaces/src/: lib.rs  rpc.rs
pallets/subscriptions/src/: lib.rs
pallets/tips/: Cargo.toml
pallets/tips/src/: lib.rs
pallets/traits/: Cargo.toml
pallets/utils/: Cargo.toml
pallets/utils/src/: lib.rs  mock.rs  rpc.rs  tests.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: constants.rs  impls.rs  lib.rs
scripts/: aggregate_types.js  generate-docs.sh  init.sh  run-benchmark-on.sh  test-all.sh  test-dotsama-claims.sh
scripts/docs-static/: README.md  index.html
