[package]
name = 'subsocial-node'
version = '0.7.2'
build = 'build.rs'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Reference implementation of Subsocial node'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[[bin]]
name = 'subsocial-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

[dependencies]
hex-literal = '0.3.3'
serde = { version = '1.0.119', features = ['derive'] }
structopt = '0.3.8'

# RPC related Dependencies
jsonrpc-core = '18.0.0'

# Local dependencies
subsocial-runtime = { path = '../runtime' }
subsocial-primitives = { path = '../primitives' }

space-follows-rpc = { path = '../pallets/space-follows/rpc' }
spaces-rpc = { path = '../pallets/spaces/rpc' }
posts-rpc = { path = '../pallets/posts/rpc' }
profile-follows-rpc = { path = '../pallets/profile-follows/rpc' }
profiles-rpc = { path = '../pallets/profiles/rpc' }
reactions-rpc = { path = '../pallets/reactions/rpc' }
roles-rpc = { path = '../pallets/roles/rpc' }

# Substrate dependencies
## Substrate FRAME Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-cli = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-client-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-executor = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-keystore = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-service = { features = ['wasmtime'], git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-sync-state-rpc = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-transaction-pool-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sc-telemetry = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-consensus = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-finality-grandpa = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }

[features]
default = []
runtime-benchmarks = ['subsocial-runtime/runtime-benchmarks']
