[package]
name = 'subsocial-primitives'
version = '0.7.1'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
sp-application-crypto = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10', default-features = false }

[dev-dependencies]
sp-serializer = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.10' }
pretty_assertions = '0.7.2'

[features]
default = ['std']
std = [
    'codec/std',
    'frame-system/std',
    'sp-application-crypto/std',
    'sp-core/std',
    'sp-runtime/std',
]
