[package]
name = 'subsocial-runtime'
version = '0.7.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Subsocial runtime'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = '4.0.0'

[dependencies]
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
hex-literal = { optional = true, version = '0.3.1' }
serde = { version = '1.0.119', optional = true, features = ['derive'] }
static_assertions = '1.1.0'

# Local dependencies
pallet-faucets = { default-features = false, path = '../pallets/faucets' }
pallet-permissions = { default-features = false, path = '../pallets/permissions' }

pallet-post-history = { default-features = false, path = '../pallets/post-history' }
pallet-posts = { default-features = false, path = '../pallets/posts' }

pallet-profile-follows = { default-features = false, path = '../pallets/profile-follows' }
pallet-profile-history = { default-features = false, path = '../pallets/profile-history' }
pallet-profiles = { default-features = false, path = '../pallets/profiles' }

pallet-reactions = { default-features = false, path = '../pallets/reactions' }
pallet-roles = { default-features = false, path = '../pallets/roles' }

pallet-space-follows = { default-features = false, path = '../pallets/space-follows' }
pallet-space-history = { default-features = false, path = '../pallets/space-history' }
pallet-space-ownership = { default-features = false, path = '../pallets/space-ownership' }
pallet-spaces = { default-features = false, path = '../pallets/spaces' }

pallet-utils = { default-features = false, path = '../pallets/utils' }

# Custom Runtime APIs
posts-runtime-api = { default-features = false, path = '../pallets/posts/rpc/runtime-api' }
profile-follows-runtime-api = { default-features = false, path = '../pallets/profile-follows/rpc/runtime-api' }
profiles-runtime-api = { default-features = false, path = '../pallets/profiles/rpc/runtime-api' }
reactions-runtime-api = { default-features = false, path = '../pallets/reactions/rpc/runtime-api' }
roles-runtime-api = { default-features = false, path = '../pallets/roles/rpc/runtime-api' }
space-follows-runtime-api = { default-features = false, path = '../pallets/space-follows/rpc/runtime-api' }
spaces-runtime-api = { default-features = false, path = '../pallets/spaces/rpc/runtime-api' }

subsocial-primitives = { default-features = false, path = '../primitives' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }

frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }

pallet-assets = { default-features = false, version = '3.0.0' }
pallet-authority-discovery = { default-features = false, version = '3.0.0' }
pallet-authorship = { default-features = false, version = '3.0.0' }
pallet-babe = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-bounties = { default-features = false, version = '3.0.0' }
pallet-collective = { default-features = false, version = '3.0.0' }
pallet-democracy = { default-features = false, version = '3.0.0' }
pallet-elections-phragmen = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-im-online = { default-features = false, version = '3.0.0' }
pallet-indices = { default-features = false, version = '3.0.0' }
pallet-membership = { default-features = false, version = '3.0.0' }
pallet-multisig = { default-features = false, version = '3.0.0' }
pallet-offences-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
pallet-offences = { default-features = false, version = '3.0.0' }
pallet-proxy = { default-features = false, version = '3.0.0' }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-recovery = { default-features = false, version = '3.0.0' }
pallet-scheduler = { default-features = false, version = '3.0.0' }
pallet-session = { default-features = false, features = ['historical'], version = '3.0.0' }
pallet-session-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
pallet-staking = { default-features = false, version = '3.0.0' }
pallet-staking-reward-curve = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-treasury = { default-features = false, version = '3.0.0' }
pallet-vesting = { default-features = false, version = '3.0.0' }
pallet-utility = { default-features = false, version = '3.0.0' }

sp-api = { default-features = false, version = '3.0.0' }
sp-authority-discovery = { default-features = false, version = '3.0.0' }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-babe = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-staking = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-assets/runtime-benchmarks',
    'pallet-babe/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-bounties/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',
    'pallet-democracy/runtime-benchmarks',
    'pallet-elections-phragmen/runtime-benchmarks',
    'pallet-grandpa/runtime-benchmarks',
    'pallet-im-online/runtime-benchmarks',
    'pallet-indices/runtime-benchmarks',
    'pallet-multisig/runtime-benchmarks',
    'pallet-proxy/runtime-benchmarks',
    'pallet-scheduler/runtime-benchmarks',
    'pallet-staking/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'pallet-treasury/runtime-benchmarks',
    'pallet-utility/runtime-benchmarks',
    'pallet-vesting/runtime-benchmarks',
    'pallet-offences-benchmarking',
    'pallet-session-benchmarking',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-assets/std',
    'pallet-authority-discovery/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-bounties/std',
    'pallet-collective/std',
    'pallet-democracy/std',
    'pallet-elections-phragmen/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-indices/std',
    'pallet-membership/std',
    'pallet-multisig/std',
    'pallet-offences/std',
    'pallet-proxy/std',
    'pallet-randomness-collective-flip/std',
    'pallet-recovery/std',
    'pallet-scheduler/std',
    'pallet-session/std',
    'pallet-staking/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-treasury/std',
    'pallet-vesting/std',
    'pallet-utility/std',
    'sp-api/std',
    'sp-authority-discovery/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'subsocial-primitives/std',
    'pallet-faucets/std',
    'pallet-permissions/std',
    'pallet-post-history/std',
    'pallet-posts/std',
    'pallet-profile-follows/std',
    'pallet-profile-history/std',
    'pallet-profiles/std',
    'pallet-reactions/std',
    'pallet-roles/std',
    'pallet-space-follows/std',
    'pallet-space-history/std',
    'pallet-space-ownership/std',
    'pallet-spaces/std',
    'pallet-utils/std',
    'posts-runtime-api/std',
    'profile-follows-runtime-api/std',
    'profiles-runtime-api/std',
    'reactions-runtime-api/std',
    'roles-runtime-api/std',
    'space-follows-runtime-api/std',
    'spaces-runtime-api/std',
]
