[package]
name = 'pallet-dotsama-claims'
version = '0.7.0'
authors = ['DappForce <dappforce@pm.me>']
edition = '2018'
license = 'GPL-3.0-only'
homepage = 'https://subsocial.network'
repository = 'https://github.com/dappforce/dappforce-subsocial-node'
description = 'Pallet that allows DOT and KSM holders from historical snapshots to claim some tokens.'
keywords = ['blockchain', 'cryptocurrency', 'social-network', 'news-feed', 'marketplace']
categories = ['cryptography::cryptocurrencies']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'pallet-balances/std',
    'pallet-timestamp/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'pallet-utils/std',
]

runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }

frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
pallet-utils = { default-features = false, path = '../utils' }

[dev-dependencies]
serde = { version = '1.0.119' }
sp-core = { default-features = false, version = '3.0.0' }
